# noise-protocol-workbench

./: Cargo.toml  README.md
.claude/skills/noise-protocol-assumptions/: SKILL.md
.claude/skills/noise-protocol-assumptions/references/: noise-implementation-audit.md
.claude/skills/noise-protocol-assumptions/scripts/: run-noise-workbench.sh  scan-noise-audit-clues.sh
scripts/: install-local.sh  install-via-curl.sh
src/: eval.rs  main.rs  model.rs  output.rs  scenarios.rs
