[package]
name = "noise-protocol-workbench"
version = "0.1.0"
edition = "2024"
description = "Educational heuristic CLI for exploring Noise handshake pattern assumptions"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
comfy-table = "7.1"
